# cifar-cnn

./: .gitignore  README.md  RECOMMENDATIONS.txt  WEEK1_STATUS.md  agg_gas_ablation.csv  analyze_defense_results.py  analyze_layer1_results.py  analyze_noniid_results.py  analyze_param_results.py  apply_optimal_config.py  apply_optimal_params.py  check_attack_results.py  combined_params_k5_20260524_065829copy.json  compare_attacks.py  debug_toml_mapping.py  delta_gas.csv  gas_threshold_calib.csv  param_generator.py  pyproject.toml  quick_test_layers.sh  run_mad_param_tests.py  run_param_tests.py  test.py  test_all_attacks.sh  test_defense_realworld.sh  test_layer1.py  test_layer1_hyperparam_comprehensive.py  test_layer1_hyperparam_quick.py  test_layer2.py  test_pipeline.py  test_reputation.py  version_snapshot.txt
AGG_AB_RESULTS/: AGG_A_gas.csv  AGG_A_gas_byalpha.csv  AGG_B_summary.csv  AGG_ablation.csv  AGG_delta.csv  AGG_probe_sanity.csv  raw_runs.csv  version_snapshot_final.txt
AGG_RESULTS/: AGG_A_gas.csv  AGG_A_gas_byalpha.csv  AGG_B_summary.csv  AGG_C_drift_check.csv  AGG_C_result.csv  AGG_D_decompose.csv  AGG_D_tracking.csv
L1L2_ANALYSIS/: A_confusion.csv  A_flag_effect.csv  A_l1_unique.csv  B_accepted_perround.csv  B_benign_cosine_drift.csv  B_dr_fpr_perround.csv  B_threshold_drift.csv  C_rescue_alpha_anomaly.csv  C_rescue_altrule.csv  C_rescue_perround.csv  C_rescue_separability.csv  D_collapse_context.csv  D_collapse_round.csv  D_seed_divergence.csv  E_by_alpha.csv  E_dataset_gap.csv  E_dr_fpr_full.csv  config_detected.txt  integrity_check.txt  report.md  round_meta.csv
backup_fashionmnist_swap_20260622_115111/: dataset.py.bak  download_data.py.bak  pyproject.toml.bak  task.py.bak
backup_fashionmnist_swap_20260622_122859/: dataset.py.bak  pyproject.toml.bak
backup_femnist_swap_20260622_075109/: dataset.py.bak  download_data.py.bak  pyproject.toml.bak  task.py.bak
backup_gds_normalize_20260621_150939/: pyproject.toml.bak
backup_mnist_support_20260621_173657/: client_app.py.bak  dataset.py.bak  download_data.py.bak  pyproject.toml.bak
backup_prefilter_test_20260622_031425/: noniid_handler.py.bak  pyproject.toml.bak
backup_prefilter_test_20260622_140856/: noniid_handler.py.bak  pyproject.toml.bak
cifar_cnn/: __init__.py  aggregation_methods.py  client_app.py  dataset.py  download_data.py  instrumentation.py  mode_round_probe.py  model_manager.py  round_logger.py  server_app copy.py  server_app.py  task.py  threshold_probe.py  warmup_cosine_probe.py
cifar_cnn/attacks/: __init__.py  alie.py  backdoor.py  base.py  byzantine.py  gaussian.py  label_flip.py  minmax.py  noise.py  on_off.py  slow_poison.py
cifar_cnn/defense/: __init__.py  adaptive_reference.py  aggregation.py  filtering.py  gas_filter.py  layer1_dbscan.backup_20251027_112044  layer1_dbscan.backup_20251029_172338  layer1_dbscan.py  layer2_detection.py  layer2_detection.py.original  mode_controller.py  mode_controller.py.original  noniid_handler.py  reputation.py  scoring.py
cifar_cnn/utils/: __init__ copy.py  __init__.py  metrics.py
final_optimization/OPT3A_drift_threshold_015/: pyproject_test.toml  results.txt
final_optimization/OPT3B_thresh_normal_alert_016/: pyproject_test.toml  results.txt
final_optimization/OPT3C_lambda_rej_hmult_050/: pyproject_test.toml  results.txt
final_optimization/OPT3D_ema_alpha_increase_005/: pyproject_test.toml  results.txt
final_optimization/OPT3E_soft_rep_alert_055/: pyproject_test.toml  results.txt
gds_range_calibration/: GDS_NORM_RANGES_proposed.txt
note/: H and GDS.txt  Variance-based Detection + Cross-round Consistency Detection.MD  optimize layer 1 2 .txt  smooth h score.txt
saved_models/detail_cfg/cfg001/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg002/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg003/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg004/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg005/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg006/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg007/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg008/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg009/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg010/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg011/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg012/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg013/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg014/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg015/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg016/: alie  backdoor  gaussian_noise  label_flip  minmax  minsum  none  on_off  random_noise  sign_flip  slow_poison
saved_models/detail_cfg/cfg017/: alie  backdoor  gaussian_noise  label_flip  (+7 more)
(+209 files in other folders)
