[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cifar-cnn"
version = "2.0.0"
description = "Federated Learning với Hybrid Adaptive Defense System (V2 - main.pdf)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "quyen"

[tool.flwr.app.components]
serverapp = "cifar_cnn.server_app:app"
clientapp = "cifar_cnn.client_app:app"

# =====================================================================
# FEDERATED LEARNING CONFIGURATION
# =====================================================================
[tool.flwr.app.config]

num-clients = 40
num-server-rounds = 50
fraction-fit = 0.6
fraction-evaluate = 0.2
min-fit-clients = 23
min-evaluate-clients = 6
min-available-clients = 40

local-epochs = 5
batch-size = 512
learning-rate = 0.001
proximal-mu = 0.01

partition-type = "iid"
alpha = 0.5

use-mixed-precision = true
num-workers = 0
pin-memory = true

attack-type = "none"
attack-ratio = 0.0
flip-probability = 1.0
flip-type = "reverse"
byzantine-type = "sign_flip"
byzantine-scale = 2.0
noise-std = 0.1

auto-save = true
save-dir = "saved_models"
save-interval = 10
resume-from = ""

enable-defense = true

# =====================================================================
# WARMUP PHASE (Vòng 1-10)
# =====================================================================
# QUAN TRỌNG: Trong warmup, TẤT CẢ defense modules bị BYPASS
# - Layer 1, Layer 2: Disabled
# - Hard/Soft Filter: Disabled  
# - Chỉ dùng trusted clients (Strust), R=1.0, mode=NORMAL
# - Mục đích: Hội tụ mô hình trên dữ liệu sạch
# Sau warmup (vòng 11+): Defense kích hoạt, clients mới có Rinit=0.25
# =====================================================================
warmup-rounds = 10

# =====================================================================
# LAYER 1: ENHANCED DBSCAN (V2 - 3 trạng thái)
# =====================================================================
# CHỈ CHẠY SAU WARMUP (vòng 11+)
# REJECTED: ||gi|| > Median + 15×MAD
# FLAGGED: ||gi|| > Median + 4×MAD  
# ACCEPTED: còn lại
# PCA: dpca = min(20, floor(0.5×n))
# =====================================================================
[tool.flwr.app.config.defense.layer1]

pca-dims = 20
dbscan-min-samples = 3
dbscan-eps-multiplier = 0.5
mad-k-reject = 15.0
mad-k-flag = 4.0
voting-threshold = 2

# =====================================================================
# LAYER 2: DISTANCE + DIRECTION (V2 - Ma trận cứu vãn)
# =====================================================================
# CHỈ CHẠY SAU WARMUP
[tool.flwr.app.config.defense.layer2]

distance-multiplier = 1.5
cosine-threshold = 0.3

# =====================================================================
# NON-IID HANDLER (V2)
# =====================================================================
# H = 0.4×H_CV + 0.4×H_sim + 0.2×H_cluster
# θ_adj = clip(θbase + (H-0.5)×0.4, 0.5, 0.9)
# =====================================================================
[tool.flwr.app.config.defense.noniid]

weight-cv = 0.4
weight-sim = 0.4
weight-cluster = 0.2
adjustment-factor = 0.4
threshold-min = 0.5
threshold-max = 0.9
baseline-window-size = 10
delta-norm-weight = 0.5
delta-direction-weight = 0.5

# =====================================================================
# TWO-STAGE FILTERING (V2)
# =====================================================================
# CHỈ CHẠY SAU WARMUP
# Hard: ci > θ_adj(base=0.85)
# Soft: ci > θ_adj(base=0.65) AND R < τ_mode
#
# τ_mode (soft-rep-threshold) LOGIC:
# - NORMAL (an toàn, dễ tính): τ = 0.2 → chỉ filter R < 0.2
# - ALERT (cảnh giác): τ = 0.4 → filter R < 0.4
# - DEFENSE (nguy hiểm, khắt khe): τ = 0.6 → filter R < 0.6
# =====================================================================
[tool.flwr.app.config.defense.filtering]

hard-threshold-base = 0.85
soft-threshold-base = 0.65
soft-rep-threshold-normal = 0.2
soft-rep-threshold-alert = 0.4
soft-rep-threshold-defense = 0.6

# =====================================================================
# REPUTATION SYSTEM (V2)
# =====================================================================
# α_down=0.5, α_up=0.15, Rinit=0.25
# λ: clean=1.0, suspicious=[0.6,0.8], rejected=[0.1,0.5]
# =====================================================================
[tool.flwr.app.config.defense.reputation]

ema-alpha-increase = 0.15
ema-alpha-decrease = 0.5
initial-reputation = 0.25
lambda-clean = 1.0
lambda-suspicious-base = 0.6
lambda-suspicious-h-mult = 0.2
lambda-rejected-base = 0.1
lambda-rejected-h-mult = 0.4
floor-warning-threshold = 0.2
floor-probation-rounds = 5

# =====================================================================
# MODE CONTROLLER (V2)
# =====================================================================
# NORMAL(ρ≤0.15), ALERT(0.15<ρ≤0.30), DEFENSE(ρ>0.30)
# Emergency: trust-breach, rep-drop
# Hysteresis: 2 rounds
# =====================================================================
[tool.flwr.app.config.defense.mode]

threshold-normal-to-alert = 0.15
threshold-alert-to-defense = 0.30
trust-breach-count = 3
trust-breach-threshold = 0.85
rep-drop-threshold = 0.10
hysteresis-rounds = 2
initial-mode = "NORMAL"
safe-weight-epsilon = 1e-6

# =====================================================================
# CONFIDENCE SCORING (V2)
# =====================================================================
# ci = clip((0.4×I_Flagged + 0.3×I_Fail_Euclidean + 0.3×δi) × factor, 0, 1)
# =====================================================================
[tool.flwr.app.config.defense.confidence]

weight-flagged = 0.4
weight-euclidean = 0.3
weight-baseline = 0.3
baseline-suspicious-threshold = 0.3
baseline-factor-suspicious = 0.8

# =====================================================================
# FEDERATION
# =====================================================================
[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 40
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.05