[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cifar-cnn"
version = "2.0.0"
description = "Federated Learning với Hybrid Adaptive Defense System (V2 - main.pdf)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "quyen"

[tool.flwr.app.components]
serverapp = "cifar_cnn.server_app:app"
clientapp = "cifar_cnn.client_app:app"

# =====================================================================
# FEDERATED LEARNING CONFIGURATION
# =====================================================================
[tool.flwr.app.config]

num-clients = 40
num-server-rounds = 50
fraction-fit = 0.6
fraction-evaluate = 0.2
min-fit-clients = 24
min-evaluate-clients = 6
min-available-clients = 40

local-epochs = 5
batch-size = 128
learning-rate = 0.001
proximal-mu = 0.01

partition-type = "non-iid"
alpha = 0.5

use-mixed-precision = true
num-workers = 2
pin-memory = true
persistent-workers = true

auto-save = true
save-dir = "saved_models/Cfg2_cluster_emphasis/minsum"
save-interval = 10
resume-from = ""

# cỉa-10 , mnist, femnist
dataset = "cifar-10"

enable-defense = true

# --- ATTACK CONFIGURATION ---
# Options: "none", "random_noise", "gaussian_noise", "sign_flip", "label_flip", "backdoor", "alie", "minmax"
attack-type = "minsum" 
attack-ratio = 0.3          # 30% clients là attackers

# 1. Random Noise (Uniform)
random-noise-scale = 0.7   # Biên độ nhiễu Uniform [-scale, scale]

# 2. Gaussian Noise
gaussian-noise-std = 0.5  # Độ lệch chuẩn của nhiễu Gaussian

# 4. Label Flipping
flip-probability = 1.0
flip-type = "reverse"       # "reverse" (0->9) hoặc "random"

# 5. Backdoor
backdoor-label = 0          # Nhãn mục tiêu
backdoor-pixel-count = 4    # Số lượng pixel trigger
backdoor-pattern-size = 3   # Kích thước vùng trigger
backdoor-scaling-factor = 10.0

# 6. ALIE (A Little Is Enough)
alie-z = 1.5              # Hệ số z 

# 7. Min-Max
minmax-gamma = 10.0         # Hệ số scale cho Min-Max attack

# =====================================================================
# WARMUP PHASE (Vòng 1-10)
# =====================================================================
# QUAN TRỌNG: Trong warmup, TẤT CẢ defense modules bị BYPASS
# - Layer 1, Layer 2: Disabled
# - Hard/Soft Filter: Disabled  
# - Chỉ dùng trusted clients (Strust), R=1.0, mode=NORMAL
# - Mục đích: Hội tụ mô hình trên dữ liệu sạch
# Sau warmup (vòng 11+): Defense kích hoạt, clients mới có Rinit=0.25
# =====================================================================
warmup-rounds = 10

# =====================================================================
# LAYER 1: ENHANCED DBSCAN (V2 - 3 trạng thái)
# =====================================================================
# CHỈ CHẠY SAU WARMUP (vòng 11+)
# REJECTED: ||gi|| > Median + 15×MAD
# FLAGGED: ||gi|| > Median + 4×MAD  
# ACCEPTED: còn lại
# PCA: dpca = min(20, floor(0.5×n))
# =====================================================================
[tool.flwr.app.config.defense.layer1]

pca-dims = 20
dbscan-min-samples = 3
dbscan-eps-multiplier = 0.5
mad-k-reject = 10.0
mad-k-flag = 5.0
voting-threshold = 3

# =====================================================================
# LAYER 2: DISTANCE + DIRECTION 
# =====================================================================
# CHỈ CHẠY SAU WARMUP
[tool.flwr.app.config.defense.layer2]

distance-multiplier = 1.5
cosine-threshold = 0.3

enable-rescue = true
# =====================================================================
# NON-IID HANDLER
# =====================================================================
# H = 0.4×H_CV + 0.4×H_sim + 0.2×H_cluster
# θ_adj = clip(θbase + (H-0.5)×0.4, 0.5, 0.9)
# =====================================================================
[tool.flwr.app.config.defense.noniid]

# H Score weights (must sum to 1.0)
weight-cv = 0.1
weight-sim = 0.2
weight-cluster = 0.7

# θ_adj parameters (PDF: θ_base + (0.5 - H) × factor)
adjustment-factor = 0.3
theta-adj-clip-min = 0.5
theta-adj-clip-max = 0.9

# Baseline tracking
baseline-window-size = 10

# δi weights (PDF: 0.5 và 0.5)
delta-norm-weight = 0.5
delta-direction-weight = 0.5

# EMA decay cho running mean gradient
grad-ema-decay = 0.3

# =====================================================================
# CONFIDENCE SCORING 
# =====================================================================
# ci = clip((0.4×I_Flagged + 0.3×I_Fail_Euclidean + 0.3×δi) × factor, 0, 1)
# =====================================================================
[tool.flwr.app.config.defense.confidence]

weight-flagged = 0.4
weight-euclidean = 0.3
weight-baseline = 0.3
baseline-suspicious-threshold = 0.25
baseline-factor-suspicious = 0.7
rescued-penalty = 0.4 
rescued-suspicious-penalty = 0.7

# =====================================================================
# TWO-STAGE FILTERING 
# =====================================================================
# CHỈ CHẠY SAU WARMUP
# Hard: ci > θ_adj(base=0.85)
# Soft: ci > θ_adj(base=0.65) AND R < τ_mode
#
# τ_mode (soft-rep-threshold) LOGIC:
# - NORMAL (an toàn, dễ tính): τ = 0.2 → chỉ filter R < 0.2
# - ALERT (cảnh giác): τ = 0.4 → filter R < 0.4
# - DEFENSE (nguy hiểm, khắt khe): τ = 0.6 → filter R < 0.6
# =====================================================================
[tool.flwr.app.config.defense.filtering]

# Ngưỡng cơ sở (θ_base)
hard-threshold-base = 0.85
soft-threshold-base = 0.65

# τ_mode - ngưỡng reputation theo mode
soft-rep-threshold-normal = 0.2
soft-rep-threshold-alert = 0.35
soft-rep-threshold-defense = 0.5

# =====================================================================
# REPUTATION SYSTEM 
# =====================================================================
# Tất cả tham số có thể tinh chỉnh để tối ưu hệ thống
#
# CÔNG THỨC CHÍNH (từ main.pdf):
# 1. P(i,t) = 0.5×(Cosine(gi, gmedian) + 1)
# 2. C(i,t) = consistency-p-weight×P + consistency-history-weight×C(t-1)
# 3. rraw = raw-c-weight×C + raw-p-weight×P
# 4. radjusted = rraw × λ(H, status)
# 5. R(i,t) = (1-α)×R(i,t-1) + α×radjusted
#
# LAMBDA PENALTY:
# - Clean: λ = lambda-clean
# - Suspicious: λ = lambda-suspicious-base + lambda-suspicious-h-mult × H
# - Rejected: λ = lambda-rejected-base + lambda-rejected-h-mult × H
# =====================================================================
[tool.flwr.app.config.defense.reputation]

# --- EMA Parameters (Asymmetric Update) ---
# α khi reputation TĂNG (slow reward - cho cơ hội chứng minh)
ema-alpha-increase = 0.1
# α khi reputation GIẢM (fast penalty - phản ứng nhanh với tấn công)
ema-alpha-decrease = 0.5

# --- Lambda Penalty Parameters ---
# λ cho clean clients (không bị flag ở bất kỳ layer nào)
lambda-clean = 1.0
# λ cho suspicious clients (bị Layer1 flag nhưng được Layer2 rescue)
# λ = base + h_mult × H → [0.6, 0.8] khi H ∈ [0, 1]
lambda-suspicious-base = 0.5
lambda-suspicious-h-mult = 0.2
# λ cho rejected clients (bị detection loại bỏ)
# λ = base + h_mult × H → [0.1, 0.5] khi H ∈ [0, 1]
lambda-rejected-base = 0.05
lambda-rejected-h-mult = 0.3

# --- Probation Parameters (Floor Lifting) ---
# Ngưỡng R để client vào probation (theo dõi đặc biệt)
floor-warning-threshold = 0.25
# Số vòng hành vi tốt liên tục để thoát probation
floor-probation-rounds = 5

# --- Initial Values ---
# R khởi tạo cho clients mới (sau warmup)
initial-reputation = 0.25
# R cho trusted clients (trong warmup phase)
trusted-reputation = 1.0

# --- Formula Weights: Consistency ---
# C(i,t) = w_p×P(i,t) + w_hist×C(i,t-1)
# Weight cho P trong công thức C (PDF: 0.6)
consistency-p-weight = 0.6
# Weight cho history trong công thức C (PDF: 0.4)
consistency-history-weight = 0.4

# --- Formula Weights: Raw Score ---
# rraw = w_c×C + w_p×P
# Weight cho C trong raw score (PDF: 0.5)
raw-c-weight = 0.5
# Weight cho P trong raw score (PDF: 0.5)
raw-p-weight = 0.5

# --- History Parameters ---
# Số vòng lưu lịch sử cosine similarity
history-window-size = 10

# =====================================================================
# MODE CONTROLLER
# =====================================================================
# Công thức từ PDF:
# - Mode Decision dựa trên ρ (threat ratio):
#   + NORMAL: ρ ≤ threshold_normal_to_alert (0.15)
#   + ALERT: threshold_normal < ρ ≤ threshold_alert_to_defense (0.30)
#   + DEFENSE: ρ > threshold_alert_to_defense (0.30)
# 
# - Hysteresis: Chỉ chuyển mode nếu ổn định >= hysteresis_rounds vòng
#
# - Reputation Gates (Emergency Override):
#   + Gate 1 (Trust Breach): >= trust_breach_count clients với R > trust_breach_threshold bị flag
#   + Gate 2 (Rep Drop): Rep drop > rep_drop_threshold so với vòng trước
#
# - Aggregation Algorithms:
#   + NORMAL: Weighted Average (theo reputation)
#   + ALERT: Trimmed Mean (dynamic trim ratio = max(0.1, ρ))
#   + DEFENSE: Coordinate Median (breakdown point 50%)
# =====================================================================
[tool.flwr.app.config.defense.mode]

# Threshold Parameters - Ngưỡng chuyển mode
threshold-normal-to-alert = 0.20   # ρ > 0.15 → ALERT
threshold-alert-to-defense = 0.35  # ρ > 0.30 → DEFENSE

# Hysteresis - Yêu cầu ổn định
hysteresis-rounds = 2              # Số vòng ổn định để chuyển mode

# Gate 1: Trust Breach - Vi phạm niềm tin
trust-breach-count = 3             # Số clients tin cậy bị flag để trigger
trust-breach-threshold = 0.85      # Ngưỡng R để coi là "tin cậy cao"

# Gate 2: Reputation Drop - Sụt giảm uy tín
rep-drop-threshold = 0.08          # % drop rep trung bình để trigger (10%)

# Initial State
initial-mode = "NORMAL"            # Mode khởi tạo

# Safe Aggregation
safe-weight-epsilon = 1e-6         # ε để check SR > 0 trong weighted avg

# =====================================================================
# AGGREGATION (V2) - FULLY CONFIGURABLE
# =====================================================================
# Công thức từ PDF:
# 1. NORMAL (Weighted Average):
#    - gglobal = Σ(R(i,t)/SR × gi) nếu SR > ε
#    - gglobal = 1/|T| × Σgi nếu SR ≤ ε (fallback FedAvg)
#
# 2. ALERT (Trimmed Mean):
#    - k = ⌊max(trim_ratio_min, ρ) × |T|⌋
#    - Cắt k giá trị cao nhất và thấp nhất mỗi chiều
#
# 3. DEFENSE (Coordinate Median):
#    - gglobal[j] = Median({gi[j] : i ∈ T})
#    - Breakdown point: 50%
# =====================================================================
[tool.flwr.app.config.defense.aggregation]

# Safe Weight Parameters
safe-weight-epsilon = 1e-6         # ε để check SR > 0

# Trimmed Mean Parameters
trim-ratio-min = 0.1               # Tỷ lệ trim tối thiểu (10%)
trim-ratio-max = 0.4               # Tỷ lệ trim tối đa (40%)

# Weighted Average Parameters  
use-reputation-weights = true      # Dùng reputation làm weight
uniform-weight-fallback = true     # Fallback về uniform nếu SR ≤ ε

# =====================================================================
# FEDERATION
# =====================================================================
[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 40
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.05